--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "googleapis": "^126.0.1"
+    "googleapis": "^126.0.1",
+    "ics": "^3.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
